--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Project</title>
   <base href="/">
-  <meta name="viewport" content="font-src 'self' data:; width=device-width, initial-scale=1">
+  <meta name="viewport" content="font-src 'self' data:, width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
